--- a/MultiTask/PendingTaskCell.xib
+++ b/MultiTask/PendingTaskCell.xib
@@ -57,7 +57,7 @@
                                         </constraints>
                                     </stackView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="titleLabel" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hmh-Md-RSS">
-                                        <rect key="frame" x="16" y="16" width="63" height="73"/>
+                                        <rect key="frame" x="16" y="16" width="313" height="73"/>
                                         <color key="backgroundColor" red="1" green="0.49803921569999998" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                         <nil key="textColor"/>
@@ -74,7 +74,7 @@
                                     <constraint firstAttribute="bottom" secondItem="Byg-dO-88g" secondAttribute="bottom" constant="16" id="Ybt-fx-vCE"/>
                                     <constraint firstItem="hmh-Md-RSS" firstAttribute="top" secondItem="tYf-km-5DM" secondAttribute="top" constant="16" id="bt9-1S-n92"/>
                                     <constraint firstItem="Byg-dO-88g" firstAttribute="top" secondItem="Sas-4I-tGq" secondAttribute="bottom" id="dlm-Bi-kJc"/>
-                                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="hmh-Md-RSS" secondAttribute="trailing" constant="16" id="pJ2-JV-SQ5"/>
+                                    <constraint firstAttribute="trailing" secondItem="hmh-Md-RSS" secondAttribute="trailing" constant="16" id="pJ2-JV-SQ5"/>
                                     <constraint firstItem="Sas-4I-tGq" firstAttribute="leading" secondItem="tYf-km-5DM" secondAttribute="leading" constant="16" id="vkQ-ah-Eju"/>
                                 </constraints>
                             </view>
