--- a/MultiTask/PlaceholderBackgroundView.xib
+++ b/MultiTask/PlaceholderBackgroundView.xib
@@ -11,7 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="EmptyView" customModule="MultiTask" customModuleProvider="target">
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="PlaceholderBackgroundView" customModule="MultiTask" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="377" height="439"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -75,7 +75,6 @@
                     </constraints>
                 </view>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="PvS-b5-FPq" secondAttribute="trailing" id="6lG-Kj-L4s"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="PvS-b5-FPq" secondAttribute="bottom" id="AWI-5g-Aru"/>
