--- a/MultiTask/TasksTab.storyboard
+++ b/MultiTask/TasksTab.storyboard
@@ -119,6 +119,9 @@
                                                                         <state key="normal" title="Save">
                                                                             <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                                         </state>
+                                                                        <state key="disabled">
+                                                                            <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                                                        </state>
                                                                         <connections>
                                                                             <action selector="handleSave:" destination="Qb7-A2-IyR" eventType="touchUpInside" id="TWA-Cy-gbP"/>
                                                                         </connections>
