--- a/MultiTask/SearchResultCell.xib
+++ b/MultiTask/SearchResultCell.xib
@@ -20,8 +20,8 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9ka-4J-BTt">
                         <rect key="frame" x="16" y="8" width="387" height="76.5"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="titleLabel" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3jV-IT-cX4">
-                                <rect key="frame" x="16" y="8" width="355" height="60.5"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="titleLabel" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3jV-IT-cX4">
+                                <rect key="frame" x="16" y="8" width="56" height="60.5"/>
                                 <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -31,7 +31,7 @@
                         <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="3jV-IT-cX4" firstAttribute="leading" secondItem="9ka-4J-BTt" secondAttribute="leading" constant="16" id="KF6-z7-THP"/>
-                            <constraint firstAttribute="trailing" secondItem="3jV-IT-cX4" secondAttribute="trailing" constant="16" id="aJJ-go-qT3"/>
+                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="3jV-IT-cX4" secondAttribute="trailing" constant="16" id="aJJ-go-qT3"/>
                             <constraint firstItem="3jV-IT-cX4" firstAttribute="top" secondItem="9ka-4J-BTt" secondAttribute="top" constant="8" id="g68-4C-jOe"/>
                             <constraint firstAttribute="bottom" secondItem="3jV-IT-cX4" secondAttribute="bottom" constant="8" id="iSU-Ur-ShH"/>
                         </constraints>
