--- a/MultiTask/MainCompletedTasksCell.xib
+++ b/MultiTask/MainCompletedTasksCell.xib
@@ -11,7 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="MainTaskCell" id="Bn9-6k-q9v" customClass="MainTaskCell" customModule="MultiTask" customModuleProvider="target">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="MainCompletedTasksCell" id="Bn9-6k-q9v" customClass="MainCompletedTasksCell" customModule="MultiTask" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="189" height="108"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
@@ -23,7 +23,6 @@
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="3aF-Fg-HtB">
                                 <rect key="frame" x="0.0" y="0.0" width="189" height="108"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Q5U-V1-myR">
                                     <size key="itemSize" width="50" height="50"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -32,7 +31,6 @@
                                 </collectionViewFlowLayout>
                             </collectionView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="3aF-Fg-HtB" secondAttribute="trailing" id="CRp-aW-vxP"/>
                             <constraint firstItem="3aF-Fg-HtB" firstAttribute="top" secondItem="xe1-Wh-nm3" secondAttribute="top" id="EzO-GS-YQL"/>
@@ -50,6 +48,10 @@
             </constraints>
             <viewLayoutGuide key="safeArea" id="Obi-Mv-2Yv"/>
             <size key="customSize" width="189" height="108"/>
+            <connections>
+                <outlet property="collectionView" destination="3aF-Fg-HtB" id="V1y-Vj-rGN"/>
+                <outlet property="collectionViewFlowLayout" destination="Q5U-V1-myR" id="zpF-4e-oqG"/>
+            </connections>
             <point key="canvasLocation" x="148.5" y="216"/>
         </collectionViewCell>
     </objects>
