--- a/MultiTask/SearchResultCell.xib
+++ b/MultiTask/SearchResultCell.xib
@@ -10,15 +10,15 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="SearchResultCell" rowHeight="93" id="elf-0g-cUU" customClass="SearchResultCell" customModule="MultiTask" customModuleProvider="target">
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="SearchResultCell" rowHeight="93" id="elf-0g-cUU" customClass="SearchResultCell" customModule="MultiTask" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="419" height="93"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="elf-0g-cUU" id="f9r-4g-Ptx">
-                <rect key="frame" x="0.0" y="0.0" width="419" height="92.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="381" height="92.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9ka-4J-BTt">
-                        <rect key="frame" x="16" y="8" width="387" height="76.5"/>
+                        <rect key="frame" x="16" y="8" width="349" height="76.5"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="titleLabel" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3jV-IT-cX4">
                                 <rect key="frame" x="16" y="8" width="56" height="60.5"/>
